# obligatorioferranty

judo-api-tests/: README.md  pyproject.toml
judo-api-tests/tests/: test_mock_api.py
obligatorioferranty/: pom.xml
obligatorioferranty/src/main/java/uy/edu/ort/obligatorioferranty/: ObligatorioferrantyApplication.java
obligatorioferranty/src/main/java/uy/edu/ort/obligatorioferranty/modelo/: Asignacion.java  Bonificacion.java  BonificacionExonerados.java  BonificacionFrecuentes.java  BonificacionTrabajadores.java  Categoria.java  Estado.java  Notificacion.java  Propietario.java  Puesto.java  SistemaBonificacion.java  SistemaPuesto.java  Tarifa.java  Transito.java  Vehiculo.java
